<resources>
    <string name="app_name">Health Services</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="doctor_profile">Doctor Profile</string>
    <string name="consult_doctor">Consult Doctor</string>
    <string name="prescription_history">Prescription History</string>
    <string name="feedback">Feedback</string>
    <string name="health">Health</string>

    <string name="consult">Consult</string>
    <string name="appointment">Appointment</string>
    <string name="speciality">Speciality</string>
    <string name="drname">Doctor Name</string>
    <string name="degree">Degree</string>
    <string name="city_name">City </string>
    <string name="profile">Profile</string>
    <string name="booking">Booking</string>
    <string name="ProfileText">MBBS.MCH-Cardio Theracic &amp; Vascular Surgery, FRCS surgury</string>
    <string name="education">Education</string>
    <string name="doctor_college">Medical College</string>
    <string name="doctor_experience">Diagnose,treat and prevent various physical injuries and diseases in adults and children.
                   \nForm and build realtionships with patients to make them feel at ease and gain their trust.
                   \nRefer patients to specialists and prescribe medication or teatment option when necessary....
                   \nDiagnose,treat and prevent various physical injuries and diseases in adults and children.
    </string>

    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="experience">Experience</string>
    <string name="ten_years">10 Years</string>
    <string name="consult_now">Consult Now</string>
    <string name="loading_doctors">Loading Doctors...</string>
    <string name="loading_prescription">Loading Prescription...</string>
    <string name="submitting_feedback">Submitting Your Feedback...</string>

    <!--feedback-->
    <string name="RateWebdoc">Rate Our Services</string>
    <string name="RateDoctor">Rate Doctor</string>
    <string name="letUsKnow">Let us know what you think</string>
    <string name="feedbackHint">Please write your feedback here</string>
    <string name="ratingHint">Very Good</string>
    <string name="Submit">Submit</string>
    <string name="Later">Later</string>

    <string name="Drname">Doctor Name</string>
    <string name="Consultation">Consultation</string>
    <string name="TextConsultation">Text </string>
    <string name="VideoConsultation">Video </string>
    <string name="AudioConsultation">Audio </string>
    <string name="SuggestedDoctors">Suggested Doctors</string>
    <string name="message">Message</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_package_message">To continue using the service, please subscribe for Health Packages</string>
    <string name="msg_no_network_connection">No network connection, please check the network settings</string>


    <!--TODO: RATING TAGS-->
    <string name="rating_1">I hate it</string>
    <string name="rating_2">I am really upset</string>
    <string name="rating_3">Its Okay</string>
    <string name="rating_4">Things are pretty good</string>
    <string name="rating_5">Feeling Great</string>

    <!--TODO: Agora App ID (WebDoc Android Library)-->
    <string name="agora_app_id">f0924810ffd04733b7a726cb961157cd</string>

    <!--TODO: Agora App ID (AgriExpert)-->
    <string name="agora_app_id_agriexpert">d8f9391b4f8d4536aab94c853282b38a</string>

    <!--TODO: Agora App ID (VetDoc)-->
    <string name="agora_app_id_vetdoc">9ec4956765a745e2b95517615b391d29</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
