<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Alert_Layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/buttonborder"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/RateWebdoc"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize_20"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/letUsKnow"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize_13"
            app:layout_constraintBottom_toTopOf="@+id/ratingBar_WebdocRating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <RatingBar
            android:id="@+id/ratingBar_WebdocRating"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:numStars="5"
            android:isIndicator="false"
            android:progressBackgroundTint="@android:color/darker_gray"
            android:progressTint="@android:color/holo_red_dark"
            android:rating="5"
            android:scaleX="1"
            android:scaleY="1"
            android:stepSize="0.5"
            app:layout_constraintBottom_toTopOf="@+id/tv_rating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ratingHint"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize_13"
            app:layout_constraintBottom_toTopOf="@+id/edt_feedback"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar_WebdocRating" />


        <EditText
            android:id="@+id/edt_feedback"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/lightGray"
            android:gravity="top|left"
            android:hint="@string/feedbackHint"
            android:lines="6"
            android:padding="5dp"
            android:textSize="@dimen/textSize_13"
            app:layout_constraintBottom_toTopOf="@+id/btn_Submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating" />


        <Button
            android:id="@+id/btn_Submit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:textAllCaps="false"
            android:background="@drawable/border_oval_white_red"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/Submit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textSize_13"
            app:layout_constraintBottom_toTopOf="@+id/btn_Later"
            app:layout_constraintEnd_toEndOf="@+id/edt_feedback"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/edt_feedback"
            app:layout_constraintTop_toBottomOf="@+id/edt_feedback" />

        <Button
            android:id="@+id/btn_Later"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/border_oval_white_red"
            android:text="@string/Later"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize_13"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_Submit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/btn_Submit"
            app:layout_constraintTop_toBottomOf="@+id/btn_Submit" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>