<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/buttonborder"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout_RateDoctorPopupActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle_RateDoctorPopupActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/RateDoctor"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSubtitle_RateDoctorPopupActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/letUsKnow"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize_11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle_RateDoctorPopupActivity" />

        <RatingBar
            android:id="@+id/ratingBar_RateDoctorPopupActivity"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:isIndicator="false"
            android:numStars="5"
            android:progressBackgroundTint="@android:color/darker_gray"
            android:progressTint="@android:color/holo_red_dark"
            android:rating="5"
            android:scaleX="1"
            android:scaleY="1"
            android:stepSize="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubtitle_RateDoctorPopupActivity" />

        <TextView
            android:id="@+id/tvRatingTag_RateDoctorPopupActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ratingHint"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/textSize_11"
            app:layout_constraintBottom_toTopOf="@+id/etReview_RateDoctorPopupActivity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar_RateDoctorPopupActivity" />


        <EditText
            android:id="@+id/etReview_RateDoctorPopupActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/lightGray"
            android:gravity="top|left"
            android:hint="@string/feedbackHint"
            android:lines="6"
            android:padding="5dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRatingTag_RateDoctorPopupActivity" />


        <Button
            android:id="@+id/btnSubmit_RateDoctorPopupActivity"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/border_oval_white_red"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/Submit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textSize_11"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnLater_RateDoctorPopupActivity"
            app:layout_constraintTop_toBottomOf="@+id/etReview_RateDoctorPopupActivity" />

        <Button
            android:id="@+id/btnLater_RateDoctorPopupActivity"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/border_oval_white_red"
            android:text="@string/Later"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/textSize_11"
            app:layout_constraintBottom_toBottomOf="@+id/btnSubmit_RateDoctorPopupActivity"
            app:layout_constraintEnd_toStartOf="@+id/btnSubmit_RateDoctorPopupActivity"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnSubmit_RateDoctorPopupActivity" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>